Fixed title issue on maine page on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,7 +24,8 @@
       #sectionTitle{
         color: #333;
         margin-top: 5px;
-        padding-left: 8em;
+        // WHAT THE FUCK WAS I ON WHEN I WROTE THIS LINE
+        // padding-left: 8em;
         h1{
           margin: auto;
         }
